--- a/html/introduction-to-html/getting-started/index.html
+++ b/html/introduction-to-html/getting-started/index.html
@@ -6,6 +6,6 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <p>This is my <a href="de.wikipedia.org">page</a></p>
   </body>
 </html>
